--- a/week_1/week_1_style.css
+++ b/week_1/week_1_style.css
@@ -5,11 +5,11 @@ body
 
 h1
 {
-    color: #fbc2fb;
+    color: #4c54bb;
     margin-left: auto;
 }
 p
 {
-    color: #d1c2fc;
+    color: #5033f3;
     margin-left: 30;
 }
