--- a/week_1/week_1_style.css
+++ b/week_1/week_1_style.css
@@ -1,15 +1,25 @@
 body
 {
     background-color:  #cef9f9;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 h1
 {
+    font-family: Arial, Helvetica, sans-serif;
     color: #4c54bb;
     margin-left: auto;
 }
+h2
+{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #535ac2;
+    margin-left: 30;
+}
 p
 {
+    font-family: Arial, Helvetica, sans-serif;
     color: #5033f3;
-    margin-left: 30;
+    margin-left: 35;
 }
