--- a/week_1/week_1_style.css
+++ b/week_1/week_1_style.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color:  #cef9f9;
+    /*background-color:  #cef9f9;*/
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
@@ -8,18 +8,18 @@ body
 h1
 {
     font-family: Arial, Helvetica, sans-serif;
-    color: #4c54bb;
+    color: black;
     margin-left: auto;
 }
 h2
 {
     font-family: Arial, Helvetica, sans-serif;
-    color: #535ac2;
+    color: black;
     margin-left: 30;
 }
 p
 {
     font-family: Arial, Helvetica, sans-serif;
-    color: #5033f3;
+    color: black;
     margin-left: 35;
 }
