--- a/week_2/Foody_Style_Sheet.css
+++ b/week_2/Foody_Style_Sheet.css
@@ -1,5 +1,6 @@
 #header1
 {
+    margin-left: 30px;
     float: left;
 }
 
@@ -41,4 +42,9 @@ nav ul li a
     position: absolute;
     left: 0;
     top: 120%;
+}
+
+#slogan
+{
+    padding: 7% 0% 0% 1%
 }
