--- a/week_2/Foody_Style_Sheet.css
+++ b/week_2/Foody_Style_Sheet.css
@@ -1,3 +1,9 @@
+#contents
+{
+    width: 100%;
+    float: left;
+}
+
 #header1
 {
     margin-left: 30px;
@@ -6,7 +12,7 @@
 
 nav
 {
-    padding: 1% 0% 0% 15%;
+    padding: 1% 0% 0% 5%;
     float: left;
     font-family: 'Arial Narrow', sans-serif;
     font-size: 24px;
@@ -46,5 +52,16 @@ nav ul li a
 
 #slogan
 {
-    padding: 7% 0% 0% 1%
+    width: 50%;
+    padding: 7% 0% 0% 1%;
+    font-size: 34px;
 }
+
+h2
+{
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(252, 122, 122);
+    padding-left: 0.5%;
+    font-weight: lighter;
+}
+
