--- a/TCA/main.css
+++ b/TCA/main.css
@@ -1,10 +1,13 @@
-#h1
+h1
 {
     text-align: center;
 }
 #page
 {
     font-family: Arial, Helvetica, sans-serif;
-    width: 80%;
-    background-color: aqua;
+    width: 80%;    
+}
+body
+{
+    background-color: rgb(212, 225, 240);
 }
