--- a/TCA/main.css
+++ b/TCA/main.css
@@ -5,9 +5,59 @@ h1
 #page
 {
     font-family: Arial, Helvetica, sans-serif;
-    width: 80%;    
+    width: 80%;
+    background-color: rgb(203, 216, 230);  
+    position: absolute;  
 }
 body
 {
     background-color: rgb(212, 225, 240);
+}
+#sections
+{
+    background-color: rgb(187, 200, 214);
+}
+nav ul li
+{
+    display: inline;
+    padding: 0% 0% 0% 10%
+}
+#links
+{
+    position: absolute;
+}
+nav
+{
+    text-align: center;
+    padding-right: 13%;
+}
+footer
+{
+    text-align: center;
+}
+#section_1
+{
+    float: left;
+    background-color: rgb(170, 181, 194);
+}
+#section_2
+{
+    margin-left: 20%;
+    float: left;
+    background-color: rgb(170, 181, 194);
+}
+/*#section_3
+{
+    float: left;
+    background-color: rgb(170, 181, 194);
+}
+#section_4
+{
+    float: left;
+    background-color: rgb(170, 181, 194);
+}
+#section_5
+{
+    float: left;
+    background-color: rgb(170, 181, 194);
 }
