--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -1,6 +1,5 @@
 #MainPage
 {
-    /*background-color: rgb(188, 136, 255);*/
     height: 100%;
     width: 100%;
 }
@@ -16,16 +15,39 @@
 }
 #Home
 {
-    background-color: rgb(188, 136, 255);
+    background-image: linear-gradient( rgb(188, 136, 255), rgb(188, 153, 255), rgb(188, 160, 255));
     width: 100%;
     height: 70%;
-    font-family: Arial, Helvetica, sans-serif;
 }
-#HomeHeading
+h1
 {
-    font-size: 72px;
+    font-size: 112px;
     text-align: center;
     font-weight: lighter;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
-    font-family: ;
+    margin-top: 4px;
+    margin-bottom: 0;
+}
+#LatestBlog
+{
+    background-image: linear-gradient( rgb(188, 160, 255), rgb(188, 165, 255));
+    width: 99.25%;
+    height: 1000px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    padding-left: 0.75%;
+    margin-right: 0;
+}
+#LatestBlogH1
+{
+    font-size: 60px;
+    text-align: left;
+    margin-right: 0;
+}
+#LatestBlogText
+{
+    margin-right: 0;
+    padding-left: 1%;
+    color: white;
 }
