--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -64,3 +64,13 @@ h1
     text-align: left;
     margin-right: 0;
 }
+#SocialMediaLink
+{
+    background-color: rgb(188, 136, 255);
+}
+#SocialMediaLinkText
+{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    color: white;
+}
