--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -2,7 +2,6 @@
 {
     height: 100%;
     width: 100%;
-    min-width: 300px;
 }
 #Logo
 {
@@ -94,41 +93,62 @@ h1
     .Menu
     {
         display: none;
+        text-decoration: none;
     }
 
     .Menu.toggleCls
     {
         display: block;
+        text-decoration: none;
+        padding-left: 0;
     }
 
     .HamIcon
     {
         display: flex;
         float: left;
-        
     }
 
     #HamIconText
     {
         font-size: 80px;
+        background-color: rgba(205, 169, 252, 0.897);
     }
 
     #HomeHeading
     {
         max-width: 80%;;
     }
+    
+    #MenuWrapper
+    {
+        float: left;
+    }
 
     #MenuBar
     {
+        background-color: rgba(205, 169, 252, 0.897);
         float: left;
+        margin-top: 55%;
+        margin-left: -36.9%;
+        width: 50%;
+    }
+
+    nav ul li
+    {
+        color: white;
+        list-style: none;
+        font-style: italic;
+        font-family: Arial, Helvetica, sans-serif;
+        padding-bottom: 20%;
+        padding-left: 4px;
     }
 
     nav ul li a
     {
         color: white;
         text-decoration: none;
-        font-style: italic;
-        font-family: Arial, Helvetica, sans-serif;
+        font-size: 24px;
     }
 }
 
