--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -86,38 +86,73 @@ h1
         max-width: 100%;
         max-height: 100%;
     }
-}
 
-.Menu
+    nav ul li 
     {
-        max-width: 100%;
-        display: inline;
-        align-content: center;
-        background-color:  ;
-    }
-
-    nav ul li
-    {
-        display: inline;
-        font-size: 24px;
-        padding: 0% 0% 0% 10%;
-        max-width: 100%;
+        text-align: center;
+        font-size: 18px;
     }
 
     nav ul li a
     {
-        max-width: 100%;
-        color: white;
-        text-decoration: none;
-        font-style: italic;
-        font-family: Arial, Helvetica, sans-serif;
+        font-size: 18px;
     }
 
-    #MenuBar
+    #HomeHeading
     {
-        background-color: rgb(188, 136, 255);
-        margin-top: 4px;
+        font-size: 40px;
     }
+
+    #LatestBlogH1
+    {
+        font-size: 32px;
+    }
+
+    #LatestBlogText
+    {
+        font-size: 18px;
+    }
+
+    #LatestPhotosH1
+    {
+        font-size: 32px;
+    }
+}
+
+.Menu
+{
+    max-width: 100%;
+    display: inline;
+    align-content: center;
+}
+
+nav ul li
+{
+    display: inline;
+    font-size: 24px;
+    padding: 0% 0% 0% 10%;
+    max-width: 100%;
+}
+
+nav ul li a
+{
+    max-width: 100%;
+    color: white;
+    text-decoration: none;
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#MenuBar
+{
+    background-color: rgb(188, 136, 255);
+    margin-top: 4px;
+}
+
+@media(max-width: 700px)
+{
+    #
+}
 
 /*@media(max-width: 768px)
 {
