--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -64,10 +64,6 @@ h1
     text-align: left;
     margin-right: 0;
 }
-#SocialMediaLink
-{
-    background-color: rgb(188, 136, 255);
-}
 #SocialMediaLinkText
 {
     font-family: Arial, Helvetica, sans-serif;
@@ -149,12 +145,7 @@ nav ul li a
     margin-top: 4px;
 }
 
-@media(max-width: 700px)
-{
-    
-}
-
-/*@media(max-width: 768px)
+@media(max-width: 770px)
 {
     .Menu
     {
@@ -169,52 +160,20 @@ nav ul li a
         padding-left: 0;
     }
 
-    .HamIcon
-    {
-        display: flex;
-        float: left;
-    }
-
     #HamIconText
     {
-        font-size: 80px;
-        background-color: rgba(205, 169, 252, 0.897);
+        font-size: 32px;
+        margin-top: 0;
+        margin-bottom: 0;
+        float: right;
+        padding-right: 5%;
+        color: white;
     }
 
     #HomeHeading
     {
-        max-width: 80%;;
-    }
-    
-    #MenuWrapper
-    {
-        float: left;
-    }
-
-    #MenuBar
-    {
-        background-color: rgba(205, 169, 252, 0.897);
-        float: left;
-        margin-top: 55%;
-        margin-left: -36.9%;
-        width: 50%;
-    }
-
-    nav ul li
-    {
-        color: white;
-        list-style: none;
-        font-style: italic;
-        font-family: Arial, Helvetica, sans-serif;
-        padding-bottom: 20%;
-        padding-left: 4px;
-    }
-
-    nav ul li a
-    {
-        color: white;
-        text-decoration: none;
-        font-size: 24px;
+        max-width: 100%;
+        padding-left: 8%;
     }
 }
 
@@ -263,4 +222,4 @@ nav ul li a
         max-height: 100%;
     }
     
-}this was used for hamburger menu. I couldnt getting looking how i wanted it.*/
+}
