--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -82,19 +82,19 @@ h1
     max-width: 100%;
     display: inline;
     align-content: center;
+    padding-left: 0;
 }
 
 nav ul li
 {
     display: inline;
     font-size: 24px;
-    padding: 0% 0% 0% 10%;
-    max-width: 100%;
+    padding: 0% 10% 0% 10%;
 }
 
 nav ul li a
 {
-    max-width: 100%;
+    width: 100%;
     color: white;
     text-decoration: none;
     font-style: italic;
@@ -106,6 +106,9 @@ nav ul li a
     background-color: rgb(188, 136, 255);
     margin-top: 4px;
     text-align: center;
+    margin-top: 4px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 @media(max-width: 770px)
@@ -191,44 +194,6 @@ nav ul li a
     .HamIcon
     {
         display: none;
-    }
-
-    .Menu
-    {
-        max-width: 100%;
-        display: inline;
-        align-content: center;
-    }
-
-    nav ul li
-    {
-        display: inline;
-        font-size: 24px;
-        padding: 0% 0% 0% 10%;
-        max-width: 100%;
-    }
-
-    nav ul li a
-    {
-        max-width: 100%;
-        color: white;
-        text-decoration: none;
-        font-style: italic;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    #MenuBar
-    {
-        margin-top: 4px;
-        max-width: 100%;
-        max-height: 100%;
-    }
-    
-    #nav
-    {
-        background-color: rgb(188, 136, 255);
-        max-width: 100%;
-        max-height: 100%;
     }
     
 }
