--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -66,15 +66,20 @@ h1
     text-align: left;
     margin-right: 0;
 }
+#SocialMediaLink
+{
+    background-color: rgb(188, 136, 255);
+    margin-top: 0;
+    margin-bottom: 0;
+}
 #SocialMediaLinkText
 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
     color: white;
-}
-#SocialMediaLinkSpan
-{
-    height: 100%;
+    margin-top: 4px;
+    margin-bottom: 0;
+    padding-left: 2%;
 }
 
 .Menu
@@ -160,6 +165,13 @@ nav ul li a
         text-align: center;
         margin-top: 0;
         background-color: rgb(188, 160, 255);
+    }
+
+    nav ul
+    {
+        border-style: solid;
+        border-width: 1px;
+        border-color: white;
     }
 
     nav ul li
