--- a/Assessment/HairCareTips.css
+++ b/Assessment/HairCareTips.css
@@ -140,6 +140,13 @@ nav ul li a
         text-decoration: none;
     }
 
+    #MenuWrapper
+    {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+    }
+
     .Menu.toggleCls
     {
         display: block;
