--- a/Assessment/About.css
+++ b/Assessment/About.css
@@ -68,6 +68,12 @@ margin-top: 4px;
 margin-bottom: 0;
 padding-left: 2%;
 }
+#InstaLink
+{
+    font-size: 24px;
+    color: white;
+    text-decoration: none;
+}
 
 .Menu
 {
@@ -196,9 +202,15 @@ max-height: 100%;
         font-size: 20px;
     }
 
-    #LatestPhotosH1
+    #SocialMediaLinkText
     {
-        font-size: 28px;
+        color: white;
+        font-size: 16px;
+    }
+
+    #InstaLink
+    {
+        font-size: 16px;
     }
 }
 
