--- a/Assessment/FormSubmitted.css
+++ b/Assessment/FormSubmitted.css
@@ -1,9 +1,7 @@
 #MainPage
 {
     height: 100%;
-    width: 70%;
-    align-content: center;
-    padding-left: 15%;
+    width: 100%;
 }
 #Logo
 {
@@ -30,6 +28,24 @@ h1
     color: white;
     margin-top: 4px;
     margin-bottom: 0;
+}
+#MyJourney
+{
+    background-image: linear-gradient( rgb(188, 160, 255),  rgb(188, 160, 255));
+    height: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#MyJourneyH1
+{
+    font-size: 32px;
+    text-align: center;
+    margin-right: 0;
+}
+#MyJourneyText
+{
+    margin-right: 0;
+    padding-left: 1%;
+    color: white;
 }
 #SocialMediaLink
 {
