--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -212,6 +212,16 @@ nav ul li a
     {
         font-size: 32px;
     }
+    
+    h2
+    {
+        font-size: 24px;
+    }
+    
+    #LatestBlog
+    {
+        height: 1550px;
+    }
 
     #LatestBlogH1
     {
