changed adaptive css

--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -43,6 +43,7 @@ h2
     width: 99.25%;
     height: 1100px;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
     font-size: 24px;
     padding-left: 0.75%;
     margin-right: 0;
