--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -41,7 +41,7 @@ h2
 {
     background-image: linear-gradient( rgb(188, 160, 255), rgb(188, 165, 255),  rgb(188, 160, 255));
     width: 99.25%;
-    height: 1100px;
+    height: 75%;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
     font-size: 24px;
@@ -59,6 +59,10 @@ h2
     margin-right: 0;
     padding-left: 1%;
     color: white;
+}
+#lastParagraph
+{
+    margin-bottom: 0;
 }
 #LatestPhotos
 {
