--- a/Assessment/About.css
+++ b/Assessment/About.css
@@ -35,7 +35,7 @@ margin-bottom: 0;
 {
 background-image: linear-gradient( rgb(188, 160, 255), rgb(188, 165, 255),  rgb(188, 160, 255));
 width: 99.25%;
-height: 850px;
+height: 75%;
 font-family: Arial, Helvetica, sans-serif;
 font-size: 24px;
 padding-left: 0.75%;
@@ -52,6 +52,10 @@ margin-right: 0;
 margin-right: 0;
 padding-left: 1%;
 color: white;
+}
+#LastParagraph
+{
+    margin-bottom: 0;
 }
 #SocialMediaLink
 {
