--- a/Assessment/HairCareTips.css
+++ b/Assessment/HairCareTips.css
@@ -35,7 +35,7 @@ h1
 {
     background-image: linear-gradient( rgb(188, 160, 255), rgb(188, 165, 255),  rgb(188, 160, 255));
     width: 99.25%;
-    height: 850px;
+    height: 75%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
     padding-left: 0.75%;
@@ -52,6 +52,15 @@ h1
     margin-right: 0;
     padding-left: 1%;
     color: white;
+}
+#RuleOfThumbParagraph
+{
+    margin-bottom: 0;
+}
+ul
+{
+    margin-top: 0;
+    margin-bottom: 0;
 }
 #HairProducts
 {
