--- a/Assessment/HairCareTips.css
+++ b/Assessment/HairCareTips.css
@@ -66,7 +66,7 @@ ul
 {
     background-image: linear-gradient(rgb(188, 160, 255),  rgb(188, 153, 255), rgb(188, 136, 255));
     width: 99.25%;
-    height: 850px;
+    height: 75%;
     padding-left: 0.75%;
 }
 #HairProductsH1
@@ -74,6 +74,13 @@ ul
     font-size: 60px;
     text-align: left;
     margin-right: 0;
+}
+#HairProductsInUse
+{
+    font-family: Arial, Helvetica, sans-serif;
+    color:white;
+    font-size: 24px;
+    margin-bottom: 0;
 }
 #SocialMediaLink
 {
@@ -227,6 +234,11 @@ nav ul li a
     #HairProductsH1
     {
         font-size: 28px;
+    }
+
+    #HairProductsInUse
+    {
+        font-size: 20px;
     }
 
     #SocialMediaLinkText
