--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -5,6 +5,7 @@
     align-content: center;
     padding-left: 15%;
 }
+
 #Logo
 {
     height: 30%;
@@ -15,12 +16,14 @@
     border-bottom: 0;
     padding-bottom: 0;
 }
+
 #Home
 {
     background-image: linear-gradient( rgb(188, 136, 255), rgb(188, 153, 255), rgb(188, 160, 255));
     width: 100%;
     height: 70%;
 }
+
 h1
 {
     font-size: 72px;
@@ -31,12 +34,14 @@ h1
     margin-top: 4px;
     margin-bottom: 0;
 }
+
 h2
 {
     color: white;
     font-weight: lighter;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 #LatestBlog
 {
     background-image: linear-gradient( rgb(188, 160, 255), rgb(188, 165, 255),  rgb(188, 160, 255));
@@ -48,41 +53,64 @@ h2
     padding-left: 0.75%;
     margin-right: 0;
 }
+
 #LatestBlogH1
 {
     font-size: 60px;
     text-align: left;
     margin-right: 0;
 }
+
 #LatestBlogText
 {
     margin-right: 0;
     padding-left: 1%;
     color: white;
 }
+
 #lastParagraph
 {
     margin-bottom: 0;
 }
+
 #LatestPhotos
 {
     background-image: linear-gradient(rgb(188, 160, 255),  rgb(188, 153, 255), rgb(188, 136, 255));
     width: 99.25%;
-    height: 850px;
+    height: 75%;
     padding-left: 0.75%;
 }
+
 #LatestPhotosH1
 {
     font-size: 60px;
     text-align: left;
     margin-right: 0;
 }
+
+#PhotoContainerRow
+{
+    display: flex;
+}
+
+#PhotoContainerColumn
+{
+    flex: 33.33%;
+    padding: 2px;
+}
+
+#RecentImg
+{
+    width: 100%;
+}
+
 #SocialMediaLink
 {
     background-color: rgb(188, 136, 255);
     margin-top: 0;
     margin-bottom: 0;
 }
+
 #SocialMediaLinkText
 {
     font-family: Arial, Helvetica, sans-serif;
