fixed a sixing issue with text area

--- a/Assessment/ContactMe.css
+++ b/Assessment/ContactMe.css
@@ -230,6 +230,11 @@ nav ul li a
     {
         display: block;
     }
+    #comments
+    {
+        height: 6em;
+        width: 20em;
+    }
     #SocialMediaLinkText
     {
         color: white;
