--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -109,6 +109,7 @@ h2
     background-color: rgb(188, 136, 255);
     margin-top: 0;
     margin-bottom: 0;
+    text-align: center;
 }
 
 #SocialMediaLinkText
@@ -160,6 +161,13 @@ nav ul li a
     margin-top: 4px;
     max-width: 100%;
     max-height: 100%;
+}
+
+#PrivacyPolicyLink
+{
+    padding-right: 2%;
+    color: white;
+    text-decoration: none;
 }
 
 @media(max-width: 770px)
@@ -280,6 +288,11 @@ nav ul li a
     #InstaLink
     {
         font-size: 16px;
+    }
+
+    #PrivacyPolicyLink
+    {
+        font-size: 16px;;
     }
 }
 
