--- a/Assessment/About.css
+++ b/Assessment/About.css
@@ -46,11 +46,14 @@ padding-left: 0.75%;
 margin-right: 0;
 }
 
-#MyJourneyH1
+.PageHeadings
 {
-font-size: 60px;
-text-align: left;
-margin-right: 0;
+    font-size: 60px;
+    text-align: left;
+    margin-right: 0;
+    color: white;
+    margin-top: 4px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #MyJourneyText
@@ -206,7 +209,7 @@ max-height: 100%;
         font-size: 32px;
     }
 
-    #MyJourneyH1
+    .PageHeadings
     {
         font-size: 28px;
     }
