--- a/Assessment/HomePage.css
+++ b/Assessment/HomePage.css
@@ -54,11 +54,14 @@ h2
     margin-right: 0;
 }
 
-#LatestBlogH1
+.PageHeadings
 {
     font-size: 60px;
     text-align: left;
     margin-right: 0;
+    color: white;
+    margin-top: 4px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #LatestBlogText
@@ -264,7 +267,7 @@ nav ul li a
         height: 100%;
     }
 
-    #LatestBlogH1
+    .PageHeadings
     {
         font-size: 28px;
     }
